--- a/Loon.conf
+++ b/Loon.conf
@@ -59,7 +59,7 @@ disconnect-on-policy-change = true
 
 
 [Remote Proxy]
-#机场订阅 = 订阅URL,udp=true,fast-open=false,vmess-aead=true,enabled=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Lab.png
+#机场名称     =     订阅地址,     udp=true, fast-open=false, vmess-aead=true, enabled=true, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Lab.png
 #网易节点 = https://git.io/JfNq3, parser-enable = true
 
 
@@ -163,14 +163,13 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 
 [Plugin]
 #插件
-#资源转写器
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Script-Hub.plugin
+
 #插件库
 https://raw.githubusercontent.com/Peng-YM/Loon-Gallery/master/loon-gallery.plugin
-#酷安去广告
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/CoolApk_remove_ads.plugin
-#哔哩哔哩优化
-http://script.hub/file/_start_/https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf/_end_/Bilibili.plugin?type=qx-rewrite&target=loon-plugin
+#资源转写器
+https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Plugin/Script-Hub.plugin
+#Spotify
+https://raw.githubusercontent.com/app2smile/rules/master/plugin/spotify.plugin
 
 
 
