--- a/Loon.conf
+++ b/Loon.conf
@@ -78,15 +78,15 @@ disconnect-on-policy-change = true
 
 
 [Proxy Group]
-#策略组
+#手动策略
 网易云音乐 = select,DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music_Unlock.png
 全球加速 = select, DIRECT, PROXY, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 苹果服务 = select, DIRECT, PROXY, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Apple.png
 港台番剧 = select, DIRECT, PROXY, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
 国际媒体 = select, DIRECT, PROXY, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 兜底分流 = select, DIRECT, PROXY, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
-#筛选
 PROXY = select, 手动, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
+#自动策略
 香港节点 = url-test, 香港, url = http://www.apple.com/library/test/success.html, interval = 600, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 台湾节点 = url-test, 台湾, url = http://www.apple.com/library/test/success.html, interval = 600, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
 日本节点 = url-test, 日本, url = http://www.apple.com/library/test/success.html, interval = 600, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
